...

                else -> stringResource(R.string.auth_continue_with_provider, provider.providerId) to providerIcon {
                    Icon(imageVector = Icons.Default.Email, contentDescription = null)
                }
            }
            val testTag = when (provider) {
                is AuthProvider.Google -> "welcome_google_button"
                else -> null
            }

            SocialButton(
                text = text,
                icon = icon,
...
